# Talos

./: .gitignore  CONTACT  MANUAL  README.md  README.md~  TECHNICAL  TUTORIAL  USAGE  analyzer.cfg  talos.py  talos.sh  talos_analyzer
CodeAnalyzer/: Analyzer.cpp  Makefile
CodeAnalyzer/dataflow/: Makefile  bitvector.cc  cfg.h  reachacc.cc  reachacc.h
CodeAnalyzer/tests/: main.c  runanalyze.sh
backend/: README  Talos_SWRR.c  Talos_exec.c  analyzer.cfg  partition_hotspot.py  talos.py
backend/samples/: proftpd.lines
frontend/: CodeAnalyzer
frontend/CodeAnalyzer/: Analyzer.cpp  Analyzer.cpp~  CMakeLists.txt  Makefile  README  ipc_lock.cpp  ipc_lock.h
frontend/CodeAnalyzer/dataflow/: Makefile  bitvector.cc  bitvector.h  dataflow.cc  dataflow.h  reachdef.cc  reachdef.h
tests/: analyzer.cfg  main.bc
tools/: Makefile  README  Talos.cpp  Talos.h  analyze_app  analyzergcc  enhance_app  g++.analyzer  g++.talos  gcc.analyzer  gcc.talos  install  loadResult.cpp  origgcc  talos.py  talos.sh  talos_analyzer  talos_search.py
